# Super-ASGE-Bros

./: .clang-format  CMakeLists.txt  README.md
cmake/libs/: asge.cmake  enetpp.cmake  json.cmake  soloud.cmake
cmake/tools/: gamedata.cmake
data/level/: level_menu.txt
data/sprites/: atlas11.aseprite
src/: CMakeLists.txt
src/game/components/: Renderer.cpp  Renderer.h  component.cpp  component.h  persistence.cpp  persistence.h  rendercomponent.cpp  rendercomponent.h  spriterenderer.cpp  spriterenderer.h  textrenderer.cpp  textrenderer.h  transform.cpp  transform.h
src/game/core/: filesystem.cpp  filesystem.h  game.cpp  game.h  gamedata.h  input.cpp  input.h  main.cpp  savesystem.cpp  savesystem.h
src/game/factories/: blockfactory.cpp  blockfactory.h  menuobjectfactory.cpp  menuobjectfactory.h  userinterface.cpp  userinterface.h
src/game/gameobjects/: gameobject.cpp  gameobject.h
src/game/gameobjects/blocks/: block.cpp  block.h  gameobject.cpp  gameobject.h  tile.cpp  tile.h  titlecard.cpp  titlecard.h
src/game/gameobjects/entities/: entity.cpp  entity.h  entitystate.cpp  entitystate.h
src/game/gameobjects/entities/player/: mario.cpp  mario.h  playeridle.cpp  playeridle.h
src/game/gamestates/: gamestate.cpp  gamestate.h  menu.cpp  menu.h  playing.cpp  playing.h  startup.cpp  startup.h
src/game/levels/: cell.cpp  cell.h  grid.cpp  grid.h  leveldata.cpp  leveldata.h
src/game/math/: vector2.cpp  vector2.h
src/game/objectfactories/: blockfactory.cpp  blockfactory.h  factory.h
